# SymSeq

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/: tests.yml
.github/workflows/: tests.yml
src/symseq/: __init__.py  cli.py  seqwrapper.py
src/symseq/core/: sequencer.py  state.py
src/symseq/grammars/: __init__.py  dyck.py  nad.py  nax.py  nback.py
src/symseq/grammars/ag/: __init__.py  agl_dataset.py  artificial_grammar.py  generator.py  presets.py  synthesis.py  utils.py
src/symseq/metrics/: __init__.py
src/symseq/metrics/grammar/: __init__.py  chomsky.py  complexity.py  hierarchical.py  inference.py  markov.py  topological.py
src/symseq/metrics/string/: __init__.py  compression.py  entropy.py  linguistic.py  regularity.py
src/symseq/metrics/stringset/: __init__.py  chunk_strength.py  distances.py  information.py
src/symseq/metrics/token/: __init__.py  duration.py  frequency.py
src/symseq/tasks/: __init__.py  default.py
src/symseq/utils/: io.py  strtools.py
src/symseq/viz/: ag_viz.py  mc_graph.py
tests/: test_backward_compatibility.py  test_complexity.py  test_dyck.py  test_nax.py  test_nback.py  test_string_metrics.py  test_stringset_metrics.py  test_token_metrics.py
